force-app/main/default/objects/VILog__c/VILog__c.object-meta.xml
<CustomObject>
    <label>Log</label>
    <nameField>
        <displayFormat>L{000000000}</displayFormat>
        <label>Ref de VILog</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>