force-app/main/default/objects/VILog__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <label>Détail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>