force-app/main/default/objects/VILog__c/fields/Nom_du_process__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_process__c</fullName>
    <label>Nom du process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>