force-app/main/default/objects/VILog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Nom_du_process__c</columns>
    <columns>Status__c</columns>
    <columns>Detail__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>